force-app/main/default/objects/sugati__Enquiry_Question_Section__c/sugati__Enquiry_Question_Section__c.object-meta.xml
<CustomObject>
    <label>Enquiry Question Section</label>
    <nameField>
        <label>Enquiry Question Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enquiry Question Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>