force-app/main/default/objects/sugati__Enquiry_Question_Section__c/fields/sugati__Enquiry_Question_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enquiry_Question_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry Question Category</label>
    <referenceTo>sugati__HE_Question_Categories__c</referenceTo>
    <relationshipLabel>Enquiry Question Sections</relationshipLabel>
    <relationshipName>Enquiry_Question_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>