force-app/main/default/objects/sugati__Enquiry_Question_Section__c/fields/sugati__QS_Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__QS_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>