force-app/main/default/objects/sugati__Enquiry_Question_Section__c/fields/sugati__QS_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__QS_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>