force-app/main/default/objects/sugati__Enquiry_Question_Section__c/fields/sugati__QS_Order__c.field-meta.xml
<CustomField>
    <fullName>sugati__QS_Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>